--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
+    "font-awesome": "^4.7.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "remixicon": "^3.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.2.0",
